fix: 플러그인 문서 정확성 및 SDD 런타임 오프라인 실행 정합성 확보
- spec-driven-development: sdd.sh가 SDD_SKILL_ROOT를 export하고 cli.py의 skill_root() 헬퍼가 이를 사용하도록 수정. uvx 설치 캐시에서 assets/schemas를 찾지 못하던 오프라인 실행 버그 수정. 존재하지 않던 verify-spec.sh 등 .sh 래퍼 참조를 sdd.sh <subcommand>로 통일하고 README의 Node.js/dist 런타임 기술을 uv/uvx 기반 파이썬 런타임으로 정정.
- git-workflow: Conventional Commits validation regex에 revert 타입 추가, Quick type choices 테이블에 revert 행 추가. GitHub PR 템플릿 fallback 설명을 실제 파일 기반 모델에 맞춰 재작성하고 query parameter/org 레벨 precedence의 미검증 주장을 제거. GitLab MR 템플릿 변수의 default-template-only 제한을 공식 문서에 맞게 명시.
- java: 생성자 참조 예제를 ArrayList::new 형태로 수정, Stream.toList() JDK 17+ 요구 분리, pattern-matching switch 예제를 sealed hierarchy로 완성, Collectors.toList() mutability 보장 없음 명시. StructuredTaskScope 예제를 JEP 505 preview API(Subtask<T>)로 정정.
- jvm: jpackage JDK 25의 --bind-services 기본값 제거(JDK-8345185)에 맞춘 --jlink-options 단일 인용 문자열 문법 제공. jpackage 버전 게이트를 JDK 14-15 incubator/JDK 16+ standard로 분리. ZGenerational JEP 474/490 동작을 JDK 21/22/23/24/25/26 각각에 대해 전체 기술. -XX:MaxPermSize의 JDK 9+ refuse-to-start 동작, PermGen vs Metaspace 플래그(-XX:MetaspaceSize, -XX:MaxMetaspaceSize, -XX:CompressedClassSpaceSize) 명시.
- kotlin: Flow 에러 복구 예제의 .retry() 시그니처 버그를 .retryWhen { cause, attempt -> ... }으로 정정, IOException import 추가, attempt 제로-인덱스 시맨틱과 성공 경로를 명시.
- spring: spring-authorization-server 메타데이터 version 1.5.7, 참조 URL을 SAS 공식 문서로 변경, 'Spring Security 7' framing을 SAS 1.5.x 독립 아티팩트 framing으로 교체. spring-batch의 Batch 6 @EnableJdbcJobRepository/@EnableMongoJobRepository 분리, ResourcelessJobRepository 기본값 반영. 메타데이터 version을 6.0.x로 조정(Spring CLAUDE.md 버전 라인 규칙).
- netty: 4.2.x.Final이 2025-12 기준 current stable이므로 recommended_version과 인라인 주석 업데이트. 4.2/4.1 API 및 마이그레이션 가이드 URL 추가.
- observability-assets: alert-rule-testing의 fixture-edge-cases.md에서 자기 자신 디렉터리를 가리키는 broken 상대 경로 수정.
- marketplace: .claude-plugin/marketplace.json과 .agents/plugins/marketplace.json에 누락돼 있던 spec-driven-development, agent-capability-kit 항목 추가. 두 marketplace의 version을 2026.04.24로